some fixes to font-size : was too small

--- a/cristian-sulea-net/WebContent/themes/html5up-future-imperfect/css/main.css
+++ b/cristian-sulea-net/WebContent/themes/html5up-future-imperfect/css/main.css
@@ -1427,7 +1427,7 @@
 	body, input, select, textarea {
 		color: #646464;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
-		font-size: 14pt;
+		font-size: 18pt;
 		font-weight: 400;
 		line-height: 1.75;
 	}
@@ -1435,7 +1435,7 @@
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 16pt;
 			}
 
 		}
@@ -1443,7 +1443,7 @@
 		@media screen and (max-width: 1280px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 14pt;
 			}
 
 		}
